docs/generated/2.0-b3/Piwik/TaskScheduler.md
<small>Piwik</small>

TaskScheduler
=============

Manages scheduled task execution.

Description
-----------

A scheduled task is a callback that should be executed every so often (such as daily,
weekly, monthly, etc.). They are registered with **TaskScheduler** through the
[TaskScheduler.getScheduledTasks](#) event.

Tasks are executed when the cron archive.php script is executed.

### Scheduling Tasks

**TODO**

### Examples

**Scheduling a task**

    // TODO

**Executing all pending tasks**

    // TODO

Methods
-------

The class defines the following methods:

- [`runTasks()`](#runtasks) &mdash; Executes tasks that are scheduled to run, then reschedules them.
- [`isTaskBeingExecuted()`](#istaskbeingexecuted) &mdash; Returns true if the TaskScheduler is currently running a scheduled task.
- [`getScheduledTimeForMethod()`](#getscheduledtimeformethod) &mdash; Return the next scheduled time given the class and method names of a scheduled task.

<a name="runtasks" id="runtasks"></a>
<a name="runTasks" id="runTasks"></a>
### `runTasks()`

Executes tasks that are scheduled to run, then reschedules them.

#### Signature

- _Returns:_ An array describing the results of scheduled task execution. Each element in the array will have the following format: ``` array( 'task' => 'task name', 'output' => '... task output ...' ) ```
    - `array`

<a name="istaskbeingexecuted" id="istaskbeingexecuted"></a>
<a name="isTaskBeingExecuted" id="isTaskBeingExecuted"></a>
### `isTaskBeingExecuted()`

Returns true if the TaskScheduler is currently running a scheduled task.

#### Signature

- It returns a `bool` value.

<a name="getscheduledtimeformethod" id="getscheduledtimeformethod"></a>
<a name="getScheduledTimeForMethod" id="getScheduledTimeForMethod"></a>
### `getScheduledTimeForMethod()`

Return the next scheduled time given the class and method names of a scheduled task.

#### Signature

- It accepts the following parameter(s):
    - `$className` (`string`) &mdash; The name of the class that contains the scheduled task method.
    - `$methodName` (`string`) &mdash; The name of the scheduled task method.
    - `$methodParameter` (`string`|`null`) &mdash; Optional method parameter.
- _Returns:_ int|bool The time in miliseconds when the scheduled task will be executed next or false if it is not scheduled to run.
    - `mixed`

